[gd_scene load_steps=9 format=3 uid="uid://bt7xo7uak2skk"]

[ext_resource type="Script" path="res://entities/cameras/TitleScreenCamera.gd" id="1_y2o7d"]
[ext_resource type="Texture2D" uid="uid://c64qty2i6kbuj" path="res://assets/pictures/stasis_logo.png" id="2_axbf7"]
[ext_resource type="PackedScene" uid="uid://bfdll0wuld6u0" path="res://scenes/ui/TitleScreen/TitleScreenButton.tscn" id="3_x11eh"]

[sub_resource type="Gradient" id="Gradient_u0bqs"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hjxmr"]
gradient = SubResource("Gradient_u0bqs")

[sub_resource type="Animation" id="Animation_tbw3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d32ho"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgwqn"]
_data = {
"RESET": SubResource("Animation_tbw3h"),
"fade": SubResource("Animation_d32ho")
}

[node name="TitleScreenCamera" type="Camera3D"]
transform = Transform3D(-0.847549, -0.151362, 0.508676, -5.31466e-08, 0.958467, 0.285203, -0.530718, 0.241723, -0.812348, 9.52141, 54.8777, 32.4306)
current = true
script = ExtResource("1_y2o7d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2

[node name="BG" type="TextureRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_hjxmr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_axbf7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewGame" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_x11eh")]
layout_mode = 2
text = "New Game"

[node name="LoadGame" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_x11eh")]
layout_mode = 2
inactive = true
text = "Load Game"

[node name="Settings" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_x11eh")]
layout_mode = 2
text = "Settings"

[node name="QuitGame" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_x11eh")]
layout_mode = 2
text = "Quit Game"

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "







"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgwqn")
}

[connection signal="clicked" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/NewGame" to="." method="_on_new_game_clicked"]
[connection signal="clicked" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_clicked"]
[connection signal="clicked" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_clicked"]
[connection signal="clicked" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_clicked"]
